Исправления отступов. Фикс отображения шаров при возврате на предыдущий экран. Добавлен автоматический выбор шара при скролле. Фикс отображения одного цвета на кольце, экран "Журнал"

--- a/MyWave/MyWave/Resources/Localizable.xcstrings
+++ b/MyWave/MyWave/Resources/Localizable.xcstrings
@@ -51,7 +51,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Вход по FaceId"
+            "value" : "Вход по Face ID"
           }
         }
       }
